docs: added proper responses displayable on the swagger response section
